# genetic-algorithms

./: CMakeLists.txt  readme.md
include/: ga.h  ga.hpp
instances/: .~lock.LEIAME.docx#  LEIAME.docx
knapsack/: in.txt  main.cpp
src/: ga.cpp  main.cpp
